network-policies/ssh-access-control-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-network-ssh-allow-policy
  namespace: multi-network-demo
spec:
  podSelector:
    matchLabels:
      app: fedora-demo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: test-client
    ports:
    - protocol: TCP
      port: 22
  - from: []
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
